--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Couscrabe</title>
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/CPrwJpM/Ku-4.png">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -122,11 +123,14 @@
             text-decoration: underline;
         }
     </style>
+    
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="0bdeca13-8212-4def-b1da-285591e1dbda" data-blockingmode="auto" type="text/javascript"></script>
+
 </head>
 <body>
     <header>
         <img src="https://i.ibb.co/CPrwJpM/Ku-4.png" alt="Brand Logo">
-        <h1>Coupon Scraper</h1>
+        <h1>Couscrabe</h1>
     </header>
     <div id="container">
         <div id="search">
@@ -136,7 +140,6 @@
         <div id="results"></div>
     </div>
 
-    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="0bdeca13-8212-4def-b1da-285591e1dbda" data-blockingmode="auto" type="text/javascript"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', (event) => {
